<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OrderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1492e6"
                android:padding="10dp"
                android:text="@string/title_payment"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrder"
                android:layout_width="match_parent"
                android:layout_height="213dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="412dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/contact"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/edt_order_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edt_order_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_order_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:ems="10"
                    android:hint="@string/tinh_huyen_xa"
                    android:inputType="text"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/payment_method"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cb_order_payment_direct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_delivery"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_order_payment_atm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_atm"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/total"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/total_default"
                android:textAlignment="viewEnd"
                android:textColor="#DD2C00"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_order_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/payment"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>