<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PersonDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/information"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imv_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:contentDescription="@string/additional_information"
                android:src="@drawable/outline_account_circle_black_36" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="250dp"
                android:layout_height="54dp"
                android:layout_toEndOf="@+id/imv_register_user"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imv_register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:contentDescription="@string/additional_information"
                android:src="@drawable/outline_account_circle_black_36" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="250dp"
                android:layout_height="54dp"
                android:layout_toEndOf="@+id/imv_register_name"
                android:hint="@string/full_name"
                android:autofillHints="name"
                android:inputType="text"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imv_register_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:contentDescription="@string/additional_information"
                android:src="@drawable/outline_smartphone_black_36" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/imv_register_phone"
                android:autofillHints="phone"
                android:inputType="phone"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginTop="10dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imv_register_password"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="40sp"-->
        <!--                android:src="@drawable/outline_lock_black_36" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/edt_register_password"-->
        <!--                android:layout_width="250dp"-->
        <!--                android:layout_height="54dp"-->
        <!--                android:layout_marginStart="0dp"-->
        <!--                android:layout_toEndOf="@+id/imv_register_password"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:hint="@string/password" />-->
        <!--        </RelativeLayout>-->

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginTop="10dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imv_register_confirm_password"-->
        <!--                android:layout_width="54dp"-->
        <!--                android:layout_height="54dp"-->
        <!--                android:layout_marginStart="40sp"-->
        <!--                android:src="@drawable/ic_accept_password" />-->

        <!--            <EditText-->
        <!--                android:id="@+id/edt_register_confirm_password"-->
        <!--                android:layout_width="250dp"-->
        <!--                android:layout_height="54dp"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:layout_toEndOf="@+id/imv_register_confirm_password"-->
        <!--                android:hint="@string/re_password" />-->
        <!--        </RelativeLayout>-->



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imv_register_address"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="40sp"
                android:contentDescription="@string/additional_information"
                android:src="@drawable/outline_location_on_black_36" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="250dp"
                android:layout_height="54dp"
                android:layout_toEndOf="@+id/imv_register_address"
                android:hint="@string/address"
                android:inputType="text"
                android:autofillHints="postalAddress"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imv_register_gender"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="40sp"
                android:contentDescription="@string/additional_information"
                android:src="@drawable/ic_gender" />

            <CheckBox
                android:id="@+id/cb_nam"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:text="@string/nam"
                android:layout_toEndOf="@+id/imv_register_gender"
                />

            <CheckBox
                android:id="@+id/cb_nu"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/cb_nam"
                android:text="@string/nu" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/radius_button"
            android:text="@string/update" />
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_button"
            android:text="@string/delete" />
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_button"
            android:text="@string/logout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>