<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/card_background"
    android:elevation="3dp">

    <CheckBox
        android:id="@+id/cartCheckbox"
        android:layout_width="29dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/productImg"
        app:layout_constraintEnd_toStartOf="@+id/productImg"
        app:layout_constraintTop_toTopOf="@+id/productImg"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/productImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/additional_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/productName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/productImg"
        app:layout_constraintTop_toTopOf="@+id/productImg" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/price"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/productImg"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/currency"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

    <ImageView
        android:id="@+id/btn_minus"
        android:layout_width="23dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/additional_information"
        app:layout_constraintBottom_toBottomOf="@+id/productImg"
        app:layout_constraintStart_toEndOf="@+id/productImg"
        app:srcCompat="@drawable/outline_remove_black_36" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_background"
        android:text="@string/default_quantity"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_minus"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn_minus"
        app:layout_constraintTop_toTopOf="@+id/btn_minus" />

    <ImageView
        android:id="@+id/btn_plus"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/additional_information"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/quantity"
        app:srcCompat="@drawable/outline_add_black_36" />

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="@string/delete_cart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>